--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Jost", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --purple-primary: #110619;
+  --purple-secondary: #381b34;
+  --blue-primary: #274e71;
+  --blue-secondary: #2a488e;
+  --white-primary: #fcf8ff;
+  --white-secondary: #f1f1e6;
+}
+
+.h1 {
+  font-size: 2.625rem;
+  font-weight: 400;
+}
+
+.h2 {
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+
+.h3 {
+  font-size: 2.625rem;
+  font-weight: 600;
+}
+
+.h4 {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.p {
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.form-title.activated-title h3 {
+  color: var(--white-primary);
 }
