forms ui finished

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   height: 10vh;
   background-color: var(--purple-primary);
   display: flex;
@@ -6,6 +7,7 @@
   justify-content: center;
   position: fixed;
   width: 100%;
+  z-index: 99;
 }
 
 .header nav {
@@ -57,7 +59,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 3;
+    z-index: 101;
     transform: translateX(100%);
     transition: 250ms ease-out;
   }
@@ -75,7 +77,7 @@
     flex-direction: column;
     gap: 6px;
     position: fixed;
-    z-index: 4;
+    z-index: 102;
     right: 5vw;
   }
 
@@ -111,7 +113,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 100;
     transform: translateX(100%);
     transition: 250ms ease-out;
   }
