--- a/src/components/FlightForm/FlightForm.module.css
+++ b/src/components/FlightForm/FlightForm.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   gap: 18px;
   margin: 0 auto;
-  width: 880px;
+  width: 1000px;
   max-width: 90vw;
   transform: translateY(-30px);
 }
@@ -46,6 +46,7 @@
   height: 32px;
   object-fit: contain;
   pointer-events: none;
+  transition: 250ms ease-out;
 }
 
 .form-title h3 {
@@ -59,13 +60,23 @@
 form.form-content {
   display: flex;
   gap: 12px;
-  padding: 0 20px 20px 20px;
+  padding: 0 12px 12px 12px;
+  flex-basis: 0;
 }
 
 .from-to__holder {
   display: flex;
   position: relative;
   align-items: center;
+  gap: 12px;
+}
+
+.from-to__holder .form-group {
+  width: 200px;
+}
+
+.date-passengers__holder {
+  display: flex;
   gap: 12px;
 }
 
@@ -94,16 +105,19 @@ form.form-content {
   position: relative;
   background-color: var(--white-secondary);
   border-radius: 5px;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .label-holder {
   position: absolute;
   top: 50%;
-  left: 0px;
+  left: 16px;
   display: flex;
   align-items: center;
   gap: 8px;
-  transform: translate(16px, -50%);
+  transform: translateY(-50%);
   pointer-events: none;
   transition: 500ms ease-out;
 }
@@ -117,6 +131,10 @@ form.form-content {
   font-weight: 600;
   font-size: 1.25rem;
   color: #7c7484;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
 }
 
 input {
@@ -131,19 +149,45 @@ input {
   font-weight: 600;
 }
 
+::placeholder {
+  opacity: 0;
+}
+
+/* input[type="date"] {
+  color: transparent;
+} */
+
 input:focus + .label-holder,
-input:valid + .label-holder {
-  top: 10px;
-  font-size: 12px;
+input:not(:placeholder-shown) + .label-holder {
+  top: 8px;
+  transform: translateY(-50%);
 }
 
 input:focus + .label-holder label,
-input:valid + .label-holder label {
+input:not(:placeholder-shown) + .label-holder label {
   font-size: 12px;
 }
 
-input[type="date"] {
-  color: transparent;
+input:focus + .label-holder img,
+input:not(:placeholder-shown) + .label-holder img {
+  width: 12px;
+  height: 12px;
+}
+
+.passengers-group {
+  max-width: 106px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 button[type="submit"] {
@@ -157,11 +201,26 @@ button[type="submit"] {
   min-width: 136px;
   font-size: 1rem;
   font-weight: 600;
+  flex-grow: 1;
 }
 
-/* input[type="date"]:focus {
-  color: #000;
-} */
+.second-type-of-form > button {
+  width: 100%;
+}
+
+@media (max-width: 968px) {
+  form.form-content {
+    flex-direction: column;
+  }
+
+  .from-to__holder div {
+    flex-grow: 1;
+  }
+
+  .passengers-group {
+    max-width: 140px;
+  }
+}
 
 @media (max-width: 768px) {
   .form-title {
