--- a/src/components/FlightForm/FlightForm.module.css
+++ b/src/components/FlightForm/FlightForm.module.css
@@ -8,7 +8,8 @@
   margin: 0 auto;
   width: 1000px;
   max-width: 90vw;
-  transform: translateY(-30px);
+  position: relative;
+  /* transform: translateY(-30px); */
 }
 
 .form-header {
