--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -114,7 +114,7 @@ header.header-dark {
     width: 100%;
     position: fixed;
     height: 100vh;
-    backdrop-filter: blur(10px);
+    background-color: #110619;
     top: 0;
     left: 0;
     right: 0;
