--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -25,8 +25,8 @@ h1 {
 }
 
 h2 {
-  font-size: 1.25rem;
-  font-weight: 400;
+  font-size: 1.75rem;
+  font-weight: 500;
 }
 
 h3 {
@@ -41,7 +41,8 @@ h4 {
 
 p {
   font-weight: 400;
-  font-size: 0.875rem;
+  font-size: 1rem;
+  line-height: 25px;
 }
 
 .form-title.activated-title h3 {
