--- a/src/components/ReservationContent/ReservationContent.module.css
+++ b/src/components/ReservationContent/ReservationContent.module.css
@@ -1,10 +1,11 @@
 .reservation-content {
+  padding-top: 200px;
   position: relative;
-  min-height: 100vh;
   background: var(--purple-primary);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .reservation-content .circle {
