--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -19,9 +19,14 @@ footer.footer-dark h4 {
   color: var(--white-primary);
 }
 
-footer.footer-dark > button {
+footer.footer-dark > a {
   background-color: var(--white-primary);
   color: #000;
+}
+
+footer.footer-dark > a:hover {
+  background-color: var(--purple-secondary);
+  color: var(--white-primary);
 }
 
 footer > p {
@@ -30,7 +35,9 @@ footer > p {
   margin: 8px auto 0 auto;
 }
 
-footer > button {
+footer > a {
+  text-decoration: none;
+  font-size: 0.875rem;
   border-radius: 30px;
   background-color: var(--purple-primary);
   color: var(--white-primary);
@@ -39,6 +46,11 @@ footer > button {
   margin-top: 28px;
   border: none;
   outline: none;
+  transition: 250ms ease-out;
+}
+
+footer > a:hover {
+  background-color: var(--purple-secondary);
 }
 
 .footer-social {
