--- a/src/components/FlightList/FlightItem/FlightItem.module.css
+++ b/src/components/FlightList/FlightItem/FlightItem.module.css
@@ -1,3 +1,12 @@
 .flight-item {
   padding: 1rem;
+  border-radius: 15px;
+  background-color: var(--white-primary);
+  transition: 250ms ease-out;
+  cursor: pointer;
+}
+
+.flight-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--white-primary);
 }
