--- a/src/components/FlightList/FlightList.module.css
+++ b/src/components/FlightList/FlightList.module.css
@@ -1,18 +1,6 @@
-.flight-list__div {
-  position: relative;
-  max-width: 90vw;
-  width: 1000px;
-  margin: 0 auto;
-}
-
-.flight-list__div h2 {
-  color: var(--white-primary);
-}
-
 .flight-list {
   display: flex;
   list-style: none;
   flex-direction: column;
-  border-radius: 5px;
-  background-color: var(--white-primary);
+  gap: 8px;
 }
