--- a/src/pages/Discover/Discover.module.css
+++ b/src/pages/Discover/Discover.module.css
@@ -1,4 +1,4 @@
-.image-holder {
+/* .image-holder {
   background: linear-gradient(
       99.55deg,
       #110619 9.63%,
@@ -8,4 +8,4 @@
   background-position: 50% 20%;
   background-size: cover;
   height: 75vh;
-}
+} */
