--- a/src/components/DiscoverDestinations/DiscoverDestinations.module.css
+++ b/src/components/DiscoverDestinations/DiscoverDestinations.module.css
@@ -1,6 +1,7 @@
 .discover-content {
   position: relative;
   overflow: hidden;
+  margin-top: 48px;
 }
 
 .discover-header {
@@ -34,7 +35,6 @@
 }
 
 .all-destinations {
-  padding-top: 80px;
   width: 1000px;
   max-width: 90vw;
   margin: 0 auto;
@@ -74,6 +74,8 @@
   text-align: center;
   padding-inline: 20px;
   pointer-events: none;
+  transition: 250ms ease-out;
+  border-radius: 5px;
 }
 
 .all-destinations ul li:hover h3 {
@@ -91,10 +93,11 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  transition: 250ms ease-out;
 }
 
 .image-overlay:hover {
-  background: transparent;
+  opacity: 0;
 }
 
 @media (max-width: 768px) {
@@ -109,5 +112,9 @@
   .discover-header p,
   .discover-header h2 {
     max-width: 100%;
+  }
+
+  .all-destinations ul li h3 {
+    font-size: 1.875rem;
   }
 }
