--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --purple-primary: #110619;
   --purple-secondary: #381b34;
   --blue-primary: #274e71;
-  --blue-secondary: #0d73cc;
+  --blue-secondary: #1d0dcc;
   --white-primary: #fcf8ff;
   --white-secondary: #f1f1e6;
 }
