--- a/src/components/FlightForm/FlightForm.module.css
+++ b/src/components/FlightForm/FlightForm.module.css
@@ -155,6 +155,12 @@ input {
   width: 100%;
   font-size: 1rem;
   font-weight: 600;
+  transition: 250ms ease-out;
+  border: 2px solid transparent;
+}
+
+.invalid-input {
+  background-color: rgba(255, 0, 0, 0.2);
 }
 
 ::placeholder {
