--- a/src/components/FlightForm/FlightForm.module.css
+++ b/src/components/FlightForm/FlightForm.module.css
@@ -31,6 +31,23 @@
   height: 55px;
   cursor: pointer;
   background-color: transparent;
+  transition: 500ms ease-out;
+}
+
+.form-title:hover {
+  background-color: rgba(17, 6, 25, 0.2);
+}
+
+.form-title:first-of-type {
+  border-radius: 10px 0 10px 0;
+}
+
+.form-title:nth-of-type(2) {
+  border-radius: 0px 0px 10px 10px;
+}
+
+.form-title:nth-of-type(3) {
+  border-radius: 0px 10px 0px 10px;
 }
 
 .active {
@@ -240,11 +257,12 @@ input[type="number"] {
   flex-direction: column;
   list-style: none;
   overflow: scroll;
-  height: 200px;
   border-radius: 4px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   width: 100%;
+  z-index: 200;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
 .autocomplete-list::-webkit-scrollbar {
@@ -267,42 +285,6 @@ input[type="number"] {
 input:not(:focus) + .label-holder + .autocomplete-list {
   opacity: 0;
   visibility: hidden;
-}
-
-.lds-ring {
-  display: inline-block;
-  position: relative;
-  width: 40px;
-  height: 40px;
-}
-.lds-ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 32px;
-  height: 32px;
-  margin: 4px;
-  border: 4px solid #fff;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
-}
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 @media (max-width: 968px) {
@@ -338,6 +320,10 @@ input:not(:focus) + .label-holder + .autocomplete-list {
 
   .form-title h3 {
     font-size: 0.75rem;
+  }
+
+  .label-holder label {
+    font-size: 1rem;
   }
 }
 
