--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 :root {
   --purple-primary: #110619;
   --purple-secondary: #381b34;
+  --purple-third: #9a7a96;
   --white-primary: #fcf8ff;
   --white-secondary: #f1f1e6;
 }
