--- a/src/components/FlightContent/FlightContent.module.css
+++ b/src/components/FlightContent/FlightContent.module.css
@@ -51,9 +51,63 @@
   background-color: transparent;
   color: var(--white-primary);
   margin-top: 1rem;
+  text-align: right;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.flights-actions button span {
+  border-bottom: 2px solid var(--white-primary);
+}
+
+.flights-actions button img {
+  width: 2rem;
   transition: 250ms ease-out;
 }
 
-.flights-actions button:hover {
-  color: var(--purple-secondary);
+.flights-actions button:hover img {
+  transform: translateX(8px);
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  margin: 4px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 500px) {
+  .flights-actions button {
+    font-size: 0.875rem;
+  }
 }
