--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -124,3 +124,9 @@ footer > a:hover {
 .copyright a:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+@media (max-width: 768px) {
+  footer {
+    margin-top: 48px;
+  }
+}
