--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,7 +8,9 @@ footer {
 }
 
 footer.footer-dark {
-  background-color: var(--purple-primary);
+  position: relative;
+  z-index: 2;
+  background-color: transparent;
 }
 
 footer.footer-dark > p {
@@ -20,12 +22,12 @@ footer.footer-dark h4 {
 }
 
 footer.footer-dark > a {
-  background-color: var(--white-primary);
-  color: #000;
+  background-color: var(--purple-secondary);
+  color: var(--white-primary);
 }
 
 footer.footer-dark > a:hover {
-  background-color: var(--purple-secondary);
+  background-color: var(--purple-primary);
   color: var(--white-primary);
 }
 
@@ -83,6 +85,7 @@ footer > a:hover {
   overflow: hidden;
   height: 140px;
   margin-top: 70px;
+  z-index: 10;
 }
 
 .footer-bottom > img {
