--- a/src/components/ReservationContent/ReservationContent.module.css
+++ b/src/components/ReservationContent/ReservationContent.module.css
@@ -1,11 +1,15 @@
 .reservation-content {
-  padding-top: 200px;
+  padding-top: 120px;
   position: relative;
   background: var(--purple-primary);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.padding-top {
+  padding-top: 220px;
 }
 
 .reservation-content .circle {
@@ -17,7 +21,7 @@
 
 .reservation-content .circle.upper-circle {
   background: linear-gradient(154.16deg, #110619 16.31%, #fcf8ff 1097%);
-  top: 0;
+  top: 100%;
   left: 0;
   transform: translate(-50%, -50%);
 }
@@ -33,5 +37,12 @@
   .reservation-content .circle {
     width: 400px;
     height: 400px;
+  }
+  .reservation-content {
+    padding-top: 100px;
+  }
+
+  .padding-top {
+    padding-top: 120px;
   }
 }
