--- a/src/components/ReservationContent/ReservationContent.module.css
+++ b/src/components/ReservationContent/ReservationContent.module.css
@@ -4,8 +4,9 @@
   background: var(--purple-primary);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .padding-top {
